kubernetes/keycloak/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2.5   
          imagePullPolicy: IfNotPresent
          args: ["start"]
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-data
              mountPath: /opt/keycloak/data
            # ) emptyDir para temporales
            - name: keycloak-tmp
              mountPath: /opt/keycloak/data/tmp
          # livenessProbe:
          #   httpGet:
          #     path: /health/ready
          #     port: 8080
          #   initialDelaySeconds: 60
          #   periodSeconds: 10
          #   timeoutSeconds: 1
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     path: /health/ready
          #     port: 8080
          #   initialDelaySeconds: 60
          #   periodSeconds: 10
          #   timeoutSeconds: 1
          #   failureThreshold: 3
      volumes:
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-data-pvc
        - name: keycloak-tmp
          emptyDir: {}
