kubernetes/keycloak/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
